TheKabal (1 April 2013)
--------------------------------------
BntText::gotoMain needs $db and $lang to pass to BntTranslate::load
load_languages has been replaced with the new class & method BntTranslate::load, which returns the $langvars array. No joke.

TheKabal (16 March 2013)
--------------------------------------
Replace old $l_whatever language variables with new $langvars variables instead.

TheKabal (9 March 2013)
--------------------------------------
defence_vs_defence has been replaced with BntDefense::defence_vs_defence
is_loan_pending has been replaced with BntIbank::is_loan_pending
ini_to_db has been replaced with BntFile::ini_to_db
create_schema has been replaced with BntSchema::create
destroy_schema has been replaced with BntSchema::destroy
calc_avg_tech has been replaced with CalcLevels::avgTech
get_planet_owner has been replaced with BntPlanets::getOwner
get_previous_day & get_next_day has been replaced with BntNews::previousDay & BntNews::nextDay
scan_error has been replaced with BntScan::error
calc_planet_torps has been replaced with CalcLevels::planetTorps
calc_planet_shields has been replaced with CalcLevels::planetShields
calc_planet_beams has been replaced with CalcLevels::planetBeams
collect_bounty has been replaced with BntBounty::collect
kick_off_planet has been replaced with BntShip::leavePlanet
player_insignia_name has been replaced with BntPlayer::getInsignia
t_port has been replaced with BntPorts::getType
is_same_team has been replaced with BntTeam::sameTeam
check_ban has been replaced with CheckBan::isBanned
scan_success has been replaced with BntScan::success
distribute_toll has been replaced with BntToll::distribute
Removed "bnt" namespace, moving all files from vendor/bnt to classes/
Fixed formatting, variable assignment, comment type, and so forth in the Xenobe include files
Lots of various coding style changes

TheMightyDude (06 March 2013)
--------------------------------------